new 802.15.4 code from http://www7.informatik.uni-erlangen.de/~fengchen/omnet/802154/

--- a/README
+++ b/README
@@ -60,8 +60,9 @@ Bottom-up:
      ppp/                basic PPP model (framing only)
      mfcore/             Core modules from the Mobility Framework (modified)
      mf80211/            MF's 802.11b ad-hoc mode model (modified)
-     ext/                                  External interface
-          experimental/                    Experimental protocols
+     ext/                External interface
+     experimental/       Experimental protocols
+     underTest/          protocols that must be tested
 
 
    network/              L3 (network layer) protocols
