--- a/README
+++ b/README
@@ -38,7 +38,7 @@ Finally, you will be ready to run your simulation. As you see, you may use
 the INET framework without writing any C++ code, as long as you use the
 available modules.
 
-Finally, to implement new protocols or modify existing ones, you'll need to
+To implement new protocols or modify existing ones, you'll need to
 download the INET source, compile it yourself, then start adding/modifying
 source files yourself.
 
@@ -77,12 +77,14 @@ Bottom-up:
      ldp/                LDP signalling protocol for MPLS
      rsvp_te/            RSVP-TE signalling protocol for MPLS (will be replaced soon)
      scenario/           specific for RSVP-TE (will be replaced soon)
+     manetrouting        Manet routing protocols
 
    transport/            transport layer protocols
      contract/           API to transport layer functionality
      tcp/                TCP protocol
      udp/                UDP protocol
      rtp/                Realtime Transport Protocol (not yet integrated)
+     sctp/               Stream Control Transmission Protocol
 
    applications/         application layer
      tcpapp/             TCP application models
